# LeapOfFaith

./: .gitignore  CMakeLists.txt  LeapOfFaith.sln  README.md  _config.yml  about.markdown  conanfile.txt
Dependencies/assimp/lib/: IrrXML.lib  assimp-vc142-mt.exp  zlib.exp  zlibstatic.lib
Dependencies/vulkan/include/spirv-headers/: spirv.hpp11  spirv.json  spirv.lua  spirv.py
Dependencies/vulkan/lib/: SPIRV-Tools-link.lib  SPIRV-Tools-shared.lib  shaderc_shared.lib
LeapOfFaith/: LeapOfFaith.vcxproj  config.json
LeapOfFaith/src/: Mesh.cpp  Mesh.h  MeshModel.cpp  Utilities.h  VulkanRenderer.cpp  VulkanRenderer.h  main.cpp
LeapOfFaith/src/shaders/: compile_shaders.bat  second.frag  second.vert  second_frag.spv  shader.frag  shader.vert
LeapOfFaithEngine/: CMakeLists.txt
LeapOfFaithEngine/src/: main.cpp
LeapOfFaithLib/: CMakeLists.txt  LeapOfFaithLib.vcxproj
LeapOfFaithLib/src/: DataStructures.h  Engine.cpp  Engine.h  Globals.cpp  Globals.h  LeapOfFaith.h  Mesh.cpp  Mesh.h  MeshModel.cpp  MeshModel.h  MeshReader.cpp  MeshReader.h  ModelImporter.cpp  ModelImporter.h  TempStructures.h  TextureUtils.cpp  TextureUtils.h  Utilities.h  VulkanRenderer.cpp  VulkanRenderer.h
LeapOfFaithLib/src/Utilities/: IO.h  Texture.cpp  Texture.h  Vulkan.h
LeapOfFaithLib/src/shaders/: compile_shaders.bat  shader.frag
ResourceCompiler/: CMakeLists.txt  ResourceCompiler.vcxproj
ResourceCompiler/src/: MeshCompiler.cpp  MeshCompiler.h  main.cpp
_posts/: 2020-09-02-hello-world.markdown  2020-09-06-On-memory-management.markdown  2020-09-06-The-need-behind-a-lowlevel-graphics-api.markdown  2020-09-06-The-need-behind-a-lowlevel-graphics-api.md
